[package]
name = "ds18b20"
version = "0.2.0"
authors = ["Nathan Fox <fuchsnj@gmail.com>", "Tensor Templar"]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/fuchsnj/ds18b20"
keywords = ["onewire", "embedded-hal-driver", "ds18b20", "temperature", "sensor"]
readme = "README.md"
categories = ["embedded", "hardware-support", "no-std"]
description = """
A Rust DS18B20 temperature sensor driver for [embedded-hal](https://github.com/rust-embedded/embedded-hal)
"""

[dependencies]
one-wire-bus = { git = "https://github.com/TensorTemplar/one-wire-bus.git" }
embedded-hal = "1.0"
